# wilrise

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: EXAMPLES_AS_DOCS_REVIEW.md  PRODUCTION_READINESS_CHECKLIST.md  architecture.md  configuration.md  errors.md  observability.md  runbook.md  versioning.md
examples/: 01_minimal.py  02_routing.py  03_dependencies.py  04_parameters.py  README.md  README.zh-CN.md  main.py  minimal.py  pyproject.toml  test_basics.py
examples/auth_crud/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py  test_concurrent.py  test_integration.py
examples/db/: __init__.py  database.py  main.py  models.py  test_integration.py
tests/: __init__.py  test_background_tasks.py  test_config.py  test_core.py  test_errors.py  test_lifecycle.py  test_params.py  test_protocol.py  test_pydantic.py  test_router.py  test_wilrise.py
wilrise/: __init__.py  core.py  errors.py  params.py  protocol.py
